[main] added projects, user information
