# src/api/project/project.router.ts
@@ -1,37 +1,42 @@
 import { NextFunction, Request, Response, Router } from 'express';
 import { ROUTES } from '../../utils/constants';
 import { Routes } from '../../utils/interfaces/routes.interface';
-import { UserController } from './user.controller';
 import { UserRole } from '@prisma/client';
 import validationMiddleware from '../../utils/middlewares/validation.middleware';
 import { roleMiddleware } from '../../utils/middlewares/role.middleware';
-import { UserRoleDto } from './dtos/user.dto';
+import { CreateProjectReqDto } from './dtos/create-project.dto';
+import { ProjectController } from './project.controller';
+import {
+  RequestWithUser,
+  UserInfo,
+} from '../../utils/interfaces/auth.interface';
 
-class UserRouter implements Routes {
+class ProjectRouter implements Routes {
   public router = Router();
-  public userController = new UserController();
+  public projectController = new ProjectController();
 
   constructor() {
     this.initializeRoutes();
   }
 
   private initializeRoutes = () => {
-    this.router.get(
-      ROUTES.user.getAllUsers,
+    this.router.post(
+      ROUTES.project.createProject,
       roleMiddleware(UserRole.MP),
-      validationMiddleware(UserRoleDto, 'query'),
-      this.getAllUsers,
+      validationMiddleware(CreateProjectReqDto, 'body'),
+      this.createProject,
     );
   };
 
-  private getAllUsers = async (
-    req: Request,
+  private createProject = async (
+    req: RequestWithUser,
     res: Response,
     next: NextFunction,
   ) => {
     try {
-      const { role } = req.query;
-      const response = await this.userController.getAllUsers(role as UserRole);
+      const body = req.body;
+      const user = req.user as UserInfo;
+      const response = await this.projectController.createProject(user, body);
       res.status(200).json(response);
     } catch (error) {
       next(error);
@@ -39,4 +44,4 @@ class UserRouter implements Routes {
   };
 }
 
-export default UserRouter;
+export default ProjectRouter;
