# src/swagger.json
@@ -23,17 +23,14 @@
 				"additionalProperties": false
 			},
 			"UserRole": {
-				"type": "string",
-				"enum": [
-					"TST",
-					"MP",
-					"ADMIN"
-				],
 				"description": "Enums"
 			},
-			"UserInfo": {
+			"RegisterReqDto": {
 				"properties": {
-					"id": {
+					"identifier": {
+						"type": "string"
+					},
+					"password": {
 						"type": "string"
 					},
 					"role": {
@@ -41,24 +38,37 @@
 					}
 				},
 				"required": [
-					"id",
+					"identifier",
+					"password",
 					"role"
 				],
 				"type": "object",
 				"additionalProperties": false
 			},
-			"CreateTeamMemberReqDto": {
+			"CreateProjectReqDto": {
 				"properties": {
-					"email": {
+					"repositoryName": {
 						"type": "string"
 					},
-					"password": {
+					"projectName": {
 						"type": "string"
+					},
+					"projectMembers": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
+					},
+					"testers": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
 					}
 				},
 				"required": [
-					"email",
-					"password"
+					"repositoryName",
+					"projectName"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -129,30 +139,25 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"anyOf": [
-										{
-											"$ref": "#/components/schemas/UserInfo"
+									"properties": {
+										"projects": {},
+										"email": {
+											"type": "string"
 										},
-										{
-											"properties": {
-												"email": {
-													"type": "string"
-												},
-												"role": {
-													"$ref": "#/components/schemas/UserRole"
-												},
-												"id": {
-													"type": "string"
-												}
-											},
-											"required": [
-												"email",
-												"role",
-												"id"
-											],
-											"type": "object"
+										"role": {
+											"$ref": "#/components/schemas/UserRole"
+										},
+										"id": {
+											"type": "string"
 										}
-									]
+									},
+									"required": [
+										"projects",
+										"email",
+										"role",
+										"id"
+									],
+									"type": "object"
 								}
 							}
 						}
@@ -167,6 +172,92 @@
 					}
 				],
 				"parameters": []
+			}
+		},
+		"/api/auth/register": {
+			"post": {
+				"operationId": "Register",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"accessToken": {}
+									},
+									"required": [
+										"accessToken"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Auth"
+				],
+				"security": [
+					{
+						"token": []
+					}
+				],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/RegisterReqDto"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/projects": {
+			"post": {
+				"operationId": "CreateProject",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"message"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Project"
+				],
+				"security": [
+					{
+						"token": []
+					}
+				],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/CreateProjectReqDto"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/api/testing/health-check": {
@@ -199,24 +290,31 @@
 				"parameters": []
 			}
 		},
-		"/api/users/create-team-member": {
-			"post": {
-				"operationId": "CreateTeamMember",
+		"/api/users": {
+			"get": {
+				"operationId": "GetAllUsers",
 				"responses": {
 					"200": {
 						"description": "Ok",
 						"content": {
 							"application/json": {
 								"schema": {
-									"properties": {
-										"message": {
-											"type": "string"
-										}
+									"items": {
+										"properties": {
+											"projects": {},
+											"role": {},
+											"email": {},
+											"id": {}
+										},
+										"required": [
+											"projects",
+											"role",
+											"email",
+											"id"
+										],
+										"type": "object"
 									},
-									"required": [
-										"message"
-									],
-									"type": "object"
+									"type": "array"
 								}
 							}
 						}
@@ -230,17 +328,16 @@
 						"token": []
 					}
 				],
-				"parameters": [],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/CreateTeamMemberReqDto"
-							}
+				"parameters": [
+					{
+						"in": "query",
+						"name": "role",
+						"required": true,
+						"schema": {
+							"$ref": "#/components/schemas/UserRole"
 						}
 					}
-				}
+				]
 			}
 		}
 	},
